Fixed datatable alignment for orders list

--- a/src/app/modules/orders/orders-list/orders-list-table/orders-list-table.component.css
+++ b/src/app/modules/orders/orders-list/orders-list-table/orders-list-table.component.css
@@ -8,6 +8,8 @@
 }
 
 .process-cell {
+  color: #fff;
+  justify-content: center;
   border-right: 1px solid lightgray !important;
 }
 
